--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74bdbd18",
+   "id": "6b45d471",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8b8051",
+   "id": "5737cc23",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,18 +31,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db800c6e",
+   "id": "65bde65f",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "!pip install interpolation quantecon"
+    "!pip install quantecon"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fda23542",
+   "id": "eec283a0",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d637122",
+   "id": "7567f5d8",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f452a7",
+   "id": "2bf61a07",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "649bf630",
+   "id": "27c0bac9",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a2429f",
+   "id": "e346ca0b",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7749980b",
+   "id": "0de899fa",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ccc750",
+   "id": "4a68ddca",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71580290",
+   "id": "b833aabe",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c7190dd",
+   "id": "791b4a44",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea9a4c3e",
+   "id": "584d4d9b",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2803f54d",
+   "id": "9e709d9f",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48deeefe",
+   "id": "d288d921",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f58e933",
+   "id": "a2d13e56",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc6eefcc",
+   "id": "7d7362bb",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51268ba7",
+   "id": "8566dfff",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d5be5a",
+   "id": "d71828a8",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b78157e9",
+   "id": "8182b2e0",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22484f6",
+   "id": "92e9c872",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15198198",
+   "id": "ebc4b206",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692f4055",
+   "id": "fcb4fa00",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e64e5fa",
+   "id": "2fe6b76f",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c442ce",
+   "id": "7685d843",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4bcd49",
+   "id": "50eef7d6",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e55bd03",
+   "id": "a4716c38",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84fdcb8",
+   "id": "002dcd29",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c10fe67",
+   "id": "4f314a15",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da9e538",
+   "id": "6d52a113",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f99e6b",
+   "id": "00c8232c",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf213e9",
+   "id": "9672fceb",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a827d88e",
+   "id": "0dfa8d39",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58eb391",
+   "id": "47a3d37d",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d80ada93",
+   "id": "d1aba8ba",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd21d3c",
+   "id": "e3f224da",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef7b1bc7",
+   "id": "7ca2f2bf",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4ef129",
+   "id": "19fc2a98",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef4dc9be",
+   "id": "5d1a1f66",
    "metadata": {
     "hide-output": false
    },
@@ -590,14 +590,13 @@
    "source": [
     "import numpy as np\n",
     "from numba import prange, njit\n",
-    "from interpolation import interp\n",
     "from quantecon.optimize import brent_max"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a356c54",
+   "id": "5e3705b2",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d12b42a",
+   "id": "240937c9",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6067102d",
+   "id": "517d9f1f",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba6d5b1",
+   "id": "f6b1cbc5",
    "metadata": {
     "hide-output": false
    },
@@ -658,13 +657,13 @@
     "    * v_array: value function array guess, 1-D array\n",
     "    * cem: Cake Eating Numba Model instance\n",
     "    \"\"\"\n",
-    "    return u_numba(c, cem) + cem.β * interp(cem.x_grid, v_array, x - c)"
+    "    return u_numba(c, cem) + cem.β * np.interp(x - c, cem.x_grid, v_array)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "613ef1d6",
+   "id": "c81175b7",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a684f40",
+   "id": "43d0e1af",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbc7523",
+   "id": "94884fe0",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215ef150",
+   "id": "9a4fdfec",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89bcc1e8",
+   "id": "03c9c197",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +769,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332851.4431372,
+  "date": 1709542797.0078018,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
