--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac99c547",
+   "id": "e64a409b",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abfd242",
+   "id": "6d63cb8a",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b097c23",
+   "id": "d234e18b",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e70dc48",
+   "id": "09af7dee",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e95309",
+   "id": "a7b97c6f",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05775cb",
+   "id": "815123e0",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -76,7 +76,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332851.4995732,
+  "date": 1709542797.062272,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
