--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d48c593",
+   "id": "201f549e",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd04b892",
+   "id": "17b9a7d3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a08dc8",
+   "id": "64342ffe",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9717cc71",
+   "id": "dccb046f",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3519f179",
+   "id": "3e741a86",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b679df",
+   "id": "aa5e2914",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098966a6",
+   "id": "57c31b88",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff40deb4",
+   "id": "0744f3b5",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b6a3b7",
+   "id": "15f9ddf6",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf0d4a2",
+   "id": "43a61c1f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a2f84d",
+   "id": "a97b8f40",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b80381",
+   "id": "65e42533",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6b603f",
+   "id": "a8cf7ca5",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8bcdbda",
+   "id": "6038cb08",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe4cbb3",
+   "id": "c8d932e9",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87be7b68",
+   "id": "901daf92",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b5f77f",
+   "id": "69b0dc10",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a47f006",
+   "id": "1feded15",
    "metadata": {
     "hide-output": false
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3964cf5",
+   "id": "6c83b897",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6920ad50",
+   "id": "57e8fddf",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db4c42a8",
+   "id": "8e381c78",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a0c22cd",
+   "id": "6b829b07",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5c988f9",
+   "id": "da7a5524",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "377d1fad",
+   "id": "8349abbd",
    "metadata": {
     "hide-output": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a0f0af7",
+   "id": "1932f5a4",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ab252d",
+   "id": "34431760",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35578485",
+   "id": "fad788f7",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d23d1423",
+   "id": "7551804c",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f3da6a",
+   "id": "8b5fa74e",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "048e8f80",
+   "id": "2e2296f1",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbef79a0",
+   "id": "cf4ca372",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1e9602",
+   "id": "a8ec4a09",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b307ba",
+   "id": "831126c2",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3c429f",
+   "id": "968d4cc4",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1c8a81",
+   "id": "da1e13e7",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0f47d8",
+   "id": "6fecb5f4",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de9c49d",
+   "id": "a73ed6df",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa17510",
+   "id": "835f9efb",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de555a68",
+   "id": "29cf251e",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b74ba39",
+   "id": "d9657913",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d352a8b6",
+   "id": "97f59b19",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b62e97aa",
+   "id": "5e371536",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90838a31",
+   "id": "5cd69599",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8413934",
+   "id": "54d784b0",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b8790b",
+   "id": "9bd5d4b8",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332851.8359082,
+  "date": 1709542797.497577,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
