--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb4ee2b1",
+   "id": "2eeb5a0f",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "859e0a0b",
+   "id": "ee50c251",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba8699b",
+   "id": "6dfaa7f8",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87493713",
+   "id": "06876952",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "!pip install --upgrade quantecon interpolation"
+    "!pip install --upgrade quantecon"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fee492",
+   "id": "a15bc235",
    "metadata": {
     "hide-output": false
    },
@@ -67,14 +67,13 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "\n",
-    "from interpolation import interp\n",
     "from numba import njit, float64\n",
     "from numba.experimental import jitclass"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa238ec2",
+   "id": "4d691e28",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8676dfa3",
+   "id": "05bb790b",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b7ddbb6",
+   "id": "ae77f7bb",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b11d657",
+   "id": "55e04f18",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e2ae1e",
+   "id": "4cbce9d7",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac50fef",
+   "id": "d98606e4",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313d82a6",
+   "id": "ae425f5b",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17cdf1e1",
+   "id": "beacf215",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28f6122",
+   "id": "80e196ab",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41efe280",
+   "id": "52a81c85",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096eb11d",
+   "id": "2f8198f2",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2985f225",
+   "id": "25b5d7ae",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b482d62e",
+   "id": "de579449",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689aacb2",
+   "id": "299dacfa",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "befb3abf",
+   "id": "4cbd59bd",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0ce1f9",
+   "id": "693a060e",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c47a1ce",
+   "id": "653b808a",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +620,7 @@
     "    \n",
     "    # Linear interpolation of policy using endogenous grid\n",
     "    def σ(a, z):\n",
-    "        return interp(a_in[:, z], σ_in[:, z], a)\n",
+    "        return np.interp(a, a_in[:, z], σ_in[:, z])\n",
     "    \n",
     "    # Allocate memory for new consumption array\n",
     "    σ_out = np.zeros_like(σ_in)\n",
@@ -644,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d7840e",
+   "id": "85c3e6ce",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14934ed",
+   "id": "1199ff79",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43267607",
+   "id": "6777eba2",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc08303e",
+   "id": "a15df272",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0932601",
+   "id": "96206759",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b8edaf",
+   "id": "486cfa40",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b35fcb6a",
+   "id": "5ba65dd4",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884614e3",
+   "id": "a6e5930a",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150b063c",
+   "id": "b0fd15d3",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e4ee66",
+   "id": "acd2e1c9",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2531a9d",
+   "id": "6a27454b",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da24b643",
+   "id": "58da2396",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e1c757a",
+   "id": "db7054e6",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "539c342e",
+   "id": "f616c4f5",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3732a35",
+   "id": "f86b5c39",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d6374f",
+   "id": "a9fc081b",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +871,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332851.483693,
+  "date": 1709542797.0469701,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
