--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2f8b217",
+   "id": "3b22fdf0",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e894e1bf",
+   "id": "655a4772",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13e25b2",
+   "id": "49a1bf4b",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05f8e0c",
+   "id": "a12e5c4c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd57726",
+   "id": "e81005c8",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03dba327",
+   "id": "fd542e4a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b2dc837",
+   "id": "734d70d7",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29a18ad",
+   "id": "4705ad96",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0cb91ee",
+   "id": "30392376",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d22b6e9",
+   "id": "9b5537fe",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b011eb91",
+   "id": "03ebf6a6",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0dd9903",
+   "id": "3380b52f",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07832b9d",
+   "id": "bc0beb7c",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da4f1be8",
+   "id": "c46353f3",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1a4b86",
+   "id": "bfa17f86",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26ffb56",
+   "id": "ea9b4ab5",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1473982",
+   "id": "6253242f",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cac9e2e",
+   "id": "a98b4dc8",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84306e5e",
+   "id": "d3f1bc21",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d883817f",
+   "id": "5a2a206b",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d6b0b9",
+   "id": "b92da741",
    "metadata": {
     "hide-output": false
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1d76cc",
+   "id": "6e12d583",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50779c1f",
+   "id": "7ff3d08b",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e517be",
+   "id": "4df10057",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58205d1",
+   "id": "06662472",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3e7f26",
+   "id": "0c7aa18c",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3506411d",
+   "id": "ecb01176",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aed164c",
+   "id": "1bb73ed5",
    "metadata": {},
    "source": [
     "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
@@ -523,7 +523,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332851.6328368,
+  "date": 1709542797.191819,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
