--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0987c9e2",
+   "id": "fa1e6055",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90e8b3b",
+   "id": "76ae850d",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1709332852.0980868,
+  "date": 1709542797.596578,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
